# LiveStream

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README  README.md  log.h  server.js  ws-server.cpp  ws-server.h
certificate/: danil_petrov.cert  danil_petrov.crt  danil_petrov.key  test_cer.crt  test_cer.key
docs/: scheme2.drawio
http_server/: server.js
http_server/db/: login.db
http_server/public/: index.html  stream.html
http_server/public/js/: ws_client.js
include/: Thread_Argv.h  base64.h  externfile.h  ffmpeg_input.hpp  ws-server.h
include/ffmpeg/: deleters.hpp  ffmpeg_input.hpp  ffmpeg_output.hpp
include/opencv/: help.hpp  opencv.hpp
include/socket/: socket.h  ws_socket.h
public/: index.html  stream.html
public/css/: index.css  stream.css
public/js/: tcp_client.js
source/: Thread_Argv.cpp  base64.cpp  compile_commands_h.json  externfile.cpp  main.cpp  ws-server.cpp
src/: ffmpeg_input.cpp  main.cpp
src/ffmpeg/: ffmpeg_input.cpp  ffmpeg_output.cpp  ffrmpeg_output.cpp
src/opencv/: opencv.cpp
src/socket/: socket.cpp  ws_socket.cpp
